--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
           </nav>
         </div>
       </header>
+
+      <a href="https://pay.kiwify.com.br/LrtynRF" target="_blank" class="floating-button">
+        Acessar Curso
+      </a>
+      
       <!-- Swiper-->
       <section class="section swiper-container swiper-slider swiper-slider-corporate swiper-pagination-style-2" data-loop="true" data-autoplay="5000" data-simulate-touch="true" data-nav="false" data-direction="vertical" id="swiper">
         <div class="swiper-wrapper text-left">
